--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-slient is golde
-Update this sms to servern
-
-New feature is deployed, hope it works
+slient is golden
+Update this sms to server
+New feature is deployed, hope it works.
