I can learn something new

--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-slient is golde
-Update this sms to servern
-
-New feature is deployed, hope it works
+I know exactly how to push and pull in git haha
